--- a/Cnn/Extent-Report/ExtentReport.html
+++ b/Cnn/Extent-Report/ExtentReport.html
@@ -54,7 +54,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2019-05-20 20:29:57</span>
+					<span class='suite-started-time'>2019-05-20 22:52:29</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -84,25 +84,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 14s+52ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 0m 25s+808ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 14s+52ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 0m 25s+808ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2019-05-20 20:29:43</span> 
+							<span class='panel-lead suite-started-time'>2019-05-20 22:52:03</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2019-05-20 20:29:57</span> 
+							<span class='panel-lead suite-ended-time'>2019-05-20 22:52:29</span> 
 						</div> 
 					</div>
 				</div>
@@ -209,7 +209,7 @@
 									<tbody>
 											<tr>
 												<td>
-													TargetHomeTest
+													TargetSignInTest
 												</td>
 											</tr>
 									</tbody>
@@ -245,7 +245,7 @@
 										<i class='mdi-maps-local-offer'></i>
 									</a>
 									<ul id='category-toggle' class='dropdown-content'>
-											<li class='TargetHomeTest'><a href='#!'>TargetHomeTest</a></li>
+											<li class='TargetSignInTest'><a href='#!'>TargetSignInTest</a></li>
 										<li class='divider'></li>
 										<li class='clear'><a href='#!'>Clear Filters</a></li>
 									</ul>
@@ -277,22 +277,22 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active pass ' extentid='cd383de5-5143-41c8-9a05-7905b469cdfd'>
+										<li class='collection-item test displayed active pass ' extentid='408a7032-a49c-4a78-9e50-ee2cebdf2a37'>
 											<div class='test-head'>
-												<span class='test-name'>CartButtontest </span>
+												<span class='test-name'>TargetCreateAccountTest1 </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
-												<span class='category-assigned hide  targethometest'></span>
+												<span class='category-assigned hide  targetsignintest'></span>
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2019-05-20 20:29:50</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2019-05-20 20:29:57</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 7s+543ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2019-05-20 22:52:08</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2019-05-20 22:52:29</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 20s+336ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
 														<div class='categories'>
-																<span class='category text-white'>TargetHomeTest</span>
+																<span class='category text-white'>TargetSignInTest</span>
 														</div>
 												</div>
 												<div class='test-steps'>
@@ -307,7 +307,7 @@
 														<tbody>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>20:29:57</td>
+																	<td class='timestamp'>22:52:29</td>
 																	<td class='step-details'>Test Passed</td>
 																</tr>
 														</tbody>
@@ -366,7 +366,7 @@
 									<ul id='cat-collection' class='cat-collection'>
 											<li class='category-item displayed'>
 												<div class='cat-head'>
-													<span class='category-name'>TargetHomeTest</span>
+													<span class='category-name'>TargetSignInTest</span>
 												</div>
 												<div class='category-status-counts'>
 														<span class='pass label dot'>Pass: 1</span>
@@ -390,8 +390,8 @@
 															</thead>
 															<tbody>
 																	<tr class='pass'>
-																		<td>2019-05-20 20:29:50</td>
-																		<td><span class='category-link linked' extentid='cd383de5-5143-41c8-9a05-7905b469cdfd'>CartButtontest</span></td>
+																		<td>2019-05-20 22:52:08</td>
+																		<td><span class='category-link linked' extentid='408a7032-a49c-4a78-9e50-ee2cebdf2a37'>TargetCreateAccountTest1</span></td>
 																		<td><div class='status label capitalize pass'>pass</div></td>
 																	</tr>
 															<tbody>
